test_programs/valid/hexadecimal_number.c
int main()
{
    0xFF;
}
