test_programs/invalid/undefined_variable.c
int main()
{
    int a;
    asdf++;
}
